課題１ルーティング定義

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,7 +13,7 @@ env = "dev"
 # Crypto Configuration
 #~~~~~~~~~~~~~~~~~~~~~~~
 play.crypto.secret     = "nextbeat"
-play.http.secret.key   = "r/leHYxoAk[sfCmr3JaP?`IGHZojMC8[KtS9v[x3?5A@APQuXNNLRZD;CFiDrzuq"
+play.http.secret.key   = "lqu=ZeftkMPh7wjYu]9q9kCePf=t^j@2=kH1fONrOiDZxYjnq220;fsT;0_<?oMv"
 play.http.errorHandler = "mvc.ErrorHandler"
 
 play.filters.enabled  += mvc.filters.CampaignCodeFilter
